--- a/data/Makefile
+++ b/data/Makefile
@@ -1,4 +1,8 @@
-todo=long_pbe0_homo.png long_pbe0_ie.png long_pbe0_s2.png long_pbe0_st.png long_pbe0_tddft.png ring_pbe0_homo.png ring_pbe0_ie.png ring_pbe0_st.png ring_pbe0_tddft.png short_pbe0_homo.png short_pbe0_ie.png short_pbe0_st.png short_pbe0_tddft_2013.png short_pbe0_tddft.png
+todo=long_pbe0_homo.png long_pbe0_ie.png long_pbe0_s2.png long_pbe0_st.png \
+     long_pbe0_tddft.png ring_pbe0_homo.png ring_pbe0_ie.png ring_pbe0_st.png \
+     ring_pbe0_tddft.png short_pbe0_homo.png short_pbe0_ie.png short_pbe0_st.png \
+     short_pbe0_tddft_2013.png short_pbe0_tddft.png \
+     short_pbe0.png ring_pbe0.png long_pbe0.png
 all: ${todo}
 
 %.eps: %.plot
